<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?attr/referenceValue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/layout_vertical_margin_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_vertical_margin_small"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_size_bigest"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/layout_vertical_margin_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_title"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/app_versions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#55ffffff"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/option_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/layout_horizontal_margin"
                android:visibility="visible">

                <Switch
                    android:id="@+id/swt_pattern"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="图案密码开关"
                    android:textColor="@color/royalblue"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_gray" />

                <Button
                    android:id="@+id/btn_setPattern"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="设置图案密码"
                    android:textColor="#f0f0f0"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_gray" />

                <Button
                    android:id="@+id/btn_about"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="关               于"
                    android:textColor="#f0f0f0"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_gray" />

                <Button
                    android:id="@+id/btn_update_log"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="更新说明与帮助"
                    android:textColor="#f0f0f0"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_team"
                    android:textColor="@color/mix_gray"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_advice_email"
                    android:textColor="@color/mix_gray"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_gray" />

                <LinearLayout
                    android:id="@+id/btn_repair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/layout_vertical_margin_small">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/test_button"
                        android:gravity="center"
                        android:text="恢复数据"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/updatelog_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/layout_horizontal_margin"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="更新说明与帮助"
                    android:textColor="@color/blue"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/updatelog"
                        android:textColor="@color/white" />

                </ScrollView>

                <Button
                    android:id="@+id/btn_update_log_back"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="返               回"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>